--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,15 @@ en:
     greeting: "<strong>Hello %{name}!<br>You have signed in."
     goodbye: "<strong>Goodbye %{name}.</strong><br>You have signed out."
   forgot_password: "Forgotten your password?"
+  placeholders:
+    user:
+      title: "e.g. Mr, Professor"
+      family_name: "e.g. Chan"
+      given_name: "e.g. Tai Wan, David"
+      chinese_name: "e.g .陳大衞"
+      password: "Six characters or more"
+      email: "eg. chantaiwan@gmail.com"
+    
   please_sign_in: "Please sign in"
   sign_in: "Sign in"
   sign_out: "Sign out"
