user account editing

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,8 +11,9 @@ en:
           remember_me: "Remember me"
   already_signed_in: "You are already signed in."
   authentication_required: "This part of the site is private. Please sign in to continue."
+  edit_account_settings: "Edit your account settings"
   flash:
-    greeting: "<strong>Hello %{name}!<br>You have signed in."
+    greeting: "<strong>Hello %{name}!</strong><br>You have signed in."
     goodbye: "<strong>Goodbye %{name}.</strong><br>You have signed out."
   forgot_password: "Forgotten your password?"
   placeholders:
@@ -23,7 +24,8 @@ en:
       chinese_name: "e.g .陳大衞"
       password: "Six characters or more"
       email: "eg. chantaiwan@gmail.com"
-    
+  notes:
+    user_email: "This is the email that you use to sign in, and that our automatic messages are sent to."
   please_sign_in: "Please sign in"
   sign_in: "Sign in"
   sign_out: "Sign out"
