--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,10 +22,12 @@ en:
       family_name: "e.g. Chan"
       given_name: "e.g. Tai Wan, David"
       chinese_name: "e.g .陳大衞"
-      password: "Six characters or more"
+      password: "Six characters or more, please"
       email: "eg. chantaiwan@gmail.com"
+  leave_password: "If you don't want to change your password, leave both boxes empty."
   notes:
-    user_email: "This is the email that you use to sign in, and that our automatic messages are sent to."
+    user_email: "This is the email that you use to sign in, and to which we send reminders and administrative messages."
   please_sign_in: "Please sign in"
+  preferences: "Preferences"
   sign_in: "Sign in"
   sign_out: "Sign out"
