many small fixes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,7 @@ en:
       chinese_name: "e.g .陳大衞"
       password: "Six characters or more, please"
       email: "eg. chantaiwan@gmail.com"
+      phone: "Phone"
   leave_password: "If you don't want to change your password, leave both boxes empty."
   notes:
     user_email: "This is the email that you use to sign in, and to which we send reminders and administrative messages."
