--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,7 +1,7 @@
 en:
   activerecord:
     attributes:
-      droom_client:
+      cdb_client:
         user:
           name: "Your name"
           email: "Email address"
