--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,36 +1,7 @@
 en:
   activerecord:
     attributes:
-      cdb_client:
-        user:
-          name: "Your name"
-          email: "Email address"
-          preferred_name: "Preferred form of address"
-          password: "Password"
-          password_confirmation: "Confirm password"
-          remember_me: "Remember me"
-  already_signed_in: "You are already signed in."
-  authentication_required: "This part of the site is private. Please sign in to continue."
-  edit_account_settings: "Edit your account settings"
-  flash:
-    greeting: "<strong>Hello %{name}!</strong><br>You have signed in."
-    goodbye: "<strong>Goodbye %{name}.</strong><br>You have signed out."
-  forgot_password: "Forgotten your password?"
-  he: "he"
-  placeholders:
-    user:
-      title: "e.g. Mr, Professor"
-      family_name: "e.g. Chan"
-      given_name: "e.g. Tai Wan, David"
-      chinese_name: "e.g .陳大衞"
-      password: "Six characters or more, please"
-      email: "eg. chantaiwan@gmail.com"
-      phone: "Phone"
-  leave_password: "If you don't want to change your password, leave both boxes empty."
-  notes:
-    user_email: "This is the email that you use to sign in, and to which we send reminders and administrative messages."
-  please_sign_in: "Please sign in"
-  preferences: "Preferences"
-  she: "she"
-  sign_in: "Sign in"
-  sign_out: "Sign out"
+      cap_client:
+        application:
+        round:
+        round_type:
